# json-serializer

./: LICENSE  README.md  stack.yaml
json-serializer/: json-serializer.cabal
json-serializer/app/: Main.hs
json-serializer/src/: JsonSerializer.hs
