name:                json-serializer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/json-serializer#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Serializer.Json, Serializer.StringJsonSerializer
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable json-serializer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , json-serializer
  default-language:    Haskell2010

test-suite json-serializer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , json-serializer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/json-serializer
